tolk-tester/tests/invalid-syntax/err-3481.tolk
import "/root/no/existing"

/**
@compilation_should_fail
@stderr cannot find file "/root/no/existing.tolk"
 */
